--- a/_posts/2020-09-10-Git---程序员必备技能.md
+++ b/_posts/2020-09-10-Git---程序员必备技能.md
@@ -36,3 +36,7 @@ categories: ["工具的使用"]
     - `remote add` <别名>：为远程版本仓库的远程连接设置一个别名
     - `remote -v` ：查看别名（一般称之为origin）
     - `remote rm` <别名>：删除别名
+    - `fetch  别名` : 拉取远程分支中修改了的分支
+    - `merge 别名/master` :合并分支 
+        - 会打开一个日志 :q 退出
+    - `diff `: 查看远程版本库和远程版本库是否有冲突
