--- a/_posts/2020-09-10-Git---程序员必备技能.md
+++ b/_posts/2020-09-10-Git---程序员必备技能.md
@@ -21,8 +21,8 @@ categories: ["工具的使用"]
 ### 在Windows下的安装
 
 ## 常用命令
-> 常用git使用注意事项命令行命名
-> - 推送的本地版本仓库的状态(status)必须为 'Clean'
+- > 常用git使用注意事项命令行命名
+- >  推送的本地版本仓库的状态(status)必须为 'Clean'
 
 - git常用命令：
     - `cd` ：切换目录
