--- a/_posts/2020-9-16-HTML基础语法.md
+++ b/_posts/2020-9-16-HTML基础语法.md
@@ -33,6 +33,9 @@ categories: ["WEB基础知识"]
 
 - 主体结构
 
+- >  窗口 :不变大小（物理大小
+- >  适口 :可变（缩放） 窗口中包含的实际内容
+
 ```html
 <!DOCTYPE html><!--声明此文件遵循html规范-->
 <html>
@@ -46,10 +49,158 @@ categories: ["WEB基础知识"]
     - 子标签
         - `<title>`标签
         - `<link>`标签
+        - `<meta>`标签
 
 - `<body>`标签
     - 属性
     - 含义: 页面
+    - 子标签
+        - 文本标签
+            - `<br />`标签
+                - 含义: 换行
+            - `<hr />`标签
+                - 含义: 在 HTML 页面中创建一条水平线（分割线。
+            - `<p> `标签
+                - 含义:定义段落(自然段。
+                    - p 元素会自动在其前后创建一些空白。浏览器会自动添加这些空间
+            - `<h1-6>`标签
+                - 含义: 定义不同大小的标题，由h1至h6
+        - 超链接标签
+            - `<a>`标签
+                - 含义: 用于从一个页面到另一个页面
+                - 属性及属性值:
+                    - `href` :链接地址。 系`<a>`标签最重要的属性
+                    - `target`:在规定出打开链接文档
+                        - 属性值:
+                            - `_blank`:跳转时打开新的页面
+                    - 如何设置锚点:
+                        - 目标地设置a标签id属性
+                        - 点击路径#idname
+        - 多媒体标签
+            - `<video>`标签
+            - `<audio>`标签
+                - 含义:定义网页中的
+                - 属性及属性值
+                    - `src`: 视频地址
+                    - `controls`:添加播放器控件（音量，进度条等
+                    - `width & height`: 宽度与高度（宽高只给一个值是等比缩放,两个都给出来是强制压缩
+                    - `autoplay`:自动播放
+                    - `loop`:循环播放
+                    - `preload`:预加载播放，不能与`autoplay`同用。`poster`="视频播放之前展示的图片的地址"
+            - `<img>`标签
+                - 含义:定义网页中的图片
+                - 属性及属性值
+                    - `src`:图片地址
+                    - `width & height`: 宽度与高度（宽高只给一个值是等比缩放,两个都给出来是强制压缩
+                    - `alt`:图片加载不出来时候代替图片的文本
+                    - `title`:鼠标悬停后出现的文字
+        - 表格标签
+            - `<table>`标签
+                - 含义:定义 HTML 表格中的行。
+                - 属性及属性值
+                    - `border`: 线宽
+                    - `align`:表格整体水平位置 
+                        - `cer / left / right` :居中 / 居左 /居右
+                    - `cellspacing` :单元格之间的间距
+                    - `cellpadding` :内容与单元格边框的距离
+            - `<caption>`标签
+            - `<tr>`标签
+                - 含义:定义 HTML 表格中的行。
+                    - tr 元素包含一个或多个 th 或 td 元素。
+            - `<th>`标签
+                - 含义:定义表格内的表头单元格。（表头信息
+            - `<td>`标签
+                - 含义:定义 HTML 表格中的标准单元格。(包含数据
+                    - 属性及属性值
+                        - `rowspan`='合并行数(合并之后其他的单元格，注释掉，不要删除掉)'
+                        - `colspan`='合并列数(合并之后其他的单元格，注释掉，不要删除掉)'
+                        - `align`='文本位置'
+        - 表单标签
+            - `<form>`标签
+                - 含义:用于为用户输入创建 HTML 表单。
+                    - 表单能够包含 input 元素，比如文本字段、复选框、单选框、提交按钮等等。表单用于向服务器传输数据。
+                - 属性及属性值
+                    - `action`:规定当提交表单时向何处发送表单数据。
+                        - 属性值
+                            - URL
+                    - `method`:规定用于发送 form-data 的 HTTP 方法。
+                        - 属性值
+                            - POST & GET
+            - `<input>`标签
+                - 含义:标签用于搜集用户信息。（输入框
+                - 属性及属性值
+                    - `name`:定义 input 元素的名称。
+                    - `value`:规定 input 元素的值。
+                    - `type`:规定 input 元素的类型。(text,image等。。)
+                    - `checked`:规定此 input 元素首次加载时应当被选中。
+                    - `autofocus`:规定输入字段在页面加载时是否获得焦点。
+                        - （不适用于 type="hidden"）
+                    - `readonly`:规定输入字段为只读。
+                    - `disabled`:当 input 元素加载时禁用此元素。
+                    - `placeholder`:规定帮助用户填写输入字段的提示。
+                    - `required`:指示输入字段的值是必需的。
+                    - `tabindex`:
 
-> - 窗口 :不变大小
-> - 适口 :可变（缩放）
+            - `<button>`标签
+                - 含义:定义一个按钮
+            - `<textarea>`标签
+                - 含义:定义多行的文本输入控件。(文本框)
+            - `<select>`标签
+                - 含义:创建单选或多选菜单。
+                - 属性及属性值
+            - `<option>`标签
+                - 含义:元素定义下拉列表中的一个选项（一个条目）。
+                - 属性及属性值 
+                    - `name` :选项名
+            - `<label>`标签
+                - 含义:直接将内容和input标签包含在一块
+                - 属性及属性值
+
+        - 列表标签
+            - `<ul>`标签
+                - 含义:定义有序列表。
+            - `<ol>`标签
+                - 含义:定义有序列表。
+            - `<li>`标签
+                - 含义:定义列表项目。
+        - 语义化标签
+            - `<thead>`
+                - 含义:定义表格的表头。该标签用于组合 HTML 表格的表头内容。
+            - `<tbody>`
+                - 含义:该标签用于组合 HTML 表格的主体内容。(表格内容)
+            - `<tfoot>`
+                - 含义:定义表格的页脚（脚注或表注）。该标签用于组合 HTML 表格中的表注内容。
+            - `<div>`
+                - 含义:定义文档中的分区或节（division/section）。
+            - `<span>`
+                - 含义:标签被用来组合文档中的行内元素。
+            - `<header>`
+                - 含义:标签定义文档的页眉（介绍信息）。
+            - `<footer>`
+                - 含义:定义文档或节的页脚。
+            - `<section>`
+                - 含义:定义文档中的节（section、区段）。比如章节、页眉、页脚或文档中的其他部分。
+            - `<nav>`
+                - 含义:定义导航链接的部分。
+
+
+- `<meta>`标签
+    - 含义: （看效果）定义该页面的信息与行为，系head中最重要的标签
+    - 属性及属性值
+        - `http-equiv` : 定义浏览器的什么行为
+            - `content-type` : 编码中文的行为
+            - `refresh` : 刷新页面行为。例：content="3.http://www.baidu.com/" ,3秒后跳转到页面（重定向
+        - `name` 
+            - `keywords` : 设置关键字
+            - `desrciption` :
+        - `content` 所定义的浏览器的行为的具体内容以及所设置的页面信息的具体内容。
+    - 该标签中的内置api 
+
+- `<link>`标签
+    - 含义: 引入外部文件
+    - 属性及属性值
+        - `href` :外部文件的地址
+        - `type` :外部文件的类型  （MIME）
+        - `rel` :外部文件与本文档的关系
+            - 例: icon,stylesheet
+
