--- a/_posts/2020-9-16-HTML基础语法.md
+++ b/_posts/2020-9-16-HTML基础语法.md
@@ -43,6 +43,27 @@ categories: ["WEB基础知识"]
 <body></body>
 </html>
 ```
+- 标签的分类
+
+    - 块元素 `block`
+        - 特点: 
+            - 换行
+            - 可设置宽高
+            - 默认宽度100%
+    - 行元素 `inline`
+        - 特点: 
+            - 不能换行
+            - 高，行高及外边距和内边距不可改变
+            - 宽度就是它的文字或图片的宽度，不可改变
+    - `inline-block`
+        - 特点: 
+            - 不自带宽高
+            - 可设置宽高
+            - 宽度随内容而变
+                - 常用标签为多媒体标签`<img>`等
+
+> 无论属于哪一类标签，所展示出来的都是默认属性，均可通过css调整其display属性
+
 - `<head>`标签 （头标题）
     - 属性
     - 含义: 定义该页面信息与行为
@@ -75,7 +96,7 @@ categories: ["WEB基础知识"]
                             - `_blank`:跳转时打开新的页面
                     - 如何设置锚点:
                         - 目标地设置a标签id属性
-                        - 点击路径#idname
+                        - 点击路径#id name (`<a href="#">`)
         - 多媒体标签
             - `<video>`标签
             - `<audio>`标签
@@ -101,9 +122,11 @@ categories: ["WEB基础知识"]
                     - `border`: 线宽
                     - `align`:表格整体水平位置 
                         - `cer / left / right` :居中 / 居左 /居右
-                    - `cellspacing` :单元格之间的间距
+                    - `cellspacing` :单元格之间的间距 (边框)
                     - `cellpadding` :内容与单元格边框的距离
             - `<caption>`标签
+                - 含义:定义表格标题。
+                    - caption 标签必须紧随 table 标签之后。只能对每个表格定义一个标题。通常这个标题会被居中于表格之上。
             - `<tr>`标签
                 - 含义:定义 HTML 表格中的行。
                     - tr 元素包含一个或多个 th 或 td 元素。
@@ -118,7 +141,7 @@ categories: ["WEB基础知识"]
         - 表单标签
             - `<form>`标签
                 - 含义:用于为用户输入创建 HTML 表单。
-                    - 表单能够包含 input 元素，比如文本字段、复选框、单选框、提交按钮等等。表单用于向服务器传输数据。
+                    - 表单能够包含 input 元素，比如文本字段、复选框、单选框、提交按钮等等。表单用于向服务器传输数据（提交。
                 - 属性及属性值
                     - `action`:规定当提交表单时向何处发送表单数据。
                         - 属性值
