--- a/_posts/2020-9-16-HTML基础语法.md
+++ b/_posts/2020-9-16-HTML基础语法.md
@@ -121,7 +121,7 @@ categories: ["WEB基础知识"]
                 - 属性及属性值
                     - `border`: 线宽
                     - `align`:表格整体水平位置 
-                        - `cer / left / right` :居中 / 居左 /居右
+                        - `center / left / right` :居中 / 居左 /居右
                     - `cellspacing` :单元格之间的间距 (边框)
                     - `cellpadding` :内容与单元格边框的距离
             - `<caption>`标签
@@ -161,8 +161,8 @@ categories: ["WEB基础知识"]
                     - `readonly`:规定输入字段为只读。
                     - `disabled`:当 input 元素加载时禁用此元素。
                     - `placeholder`:规定帮助用户填写输入字段的提示。
-                    - `required`:指示输入字段的值是必需的。
-                    - `tabindex`:
+                    - `required`:按提示输入的必填字段
+                    - `tabindex`:按tab键按顺序进行链接之间的导航（如 tabindex="1" 则先导航）
 
             - `<button>`标签
                 - 含义:定义一个按钮
