--- a/_posts/2020-9-18-CSS.md
+++ b/_posts/2020-9-18-CSS.md
@@ -84,11 +84,32 @@ div {
         - `inline`:显示为行元素
         - `inline-block`:行内元素
 
+
 - 布局属性
-    - 表格布局（原始）
+    - 表格布局(原始)
+        - 好处:宽度可以根据内容任意收缩
+        - 坏处:不能够适配
+        - 使用场景:使用场景基本不发生布局变化
     - 定位布局
-        - position属性
+        - position 属性
+            - relative 为absolute提供参照物
+                - 是原先位置的左上角
+                - 在主文档流的位置不会被占据
+            - absolute 
+                - 离当前元素最近的一个position属性不为normal的元素的左上角为参考点,如果当前元素所有父级元素都为normal,那么以body的左上角为参照物(没有设置position属性的均为normal)
+                - 在主文档流的位置会被占据
+            - fixed 页面中不随滚动而变化 
+                - 参考点为body左上角
+        - 辅助属性:left,right,top,bottom配合其他一起使用,如果不设置默认为left为0,top为0
+        - 好处:方便开发,直观并且游离于主文档流而布局
+        - 坏处:适配难度较高
+        - 使用场景:一般用于微小的布局,运用在前段主件中
     - 浮动布局
-        - float属性
+        - float 属性
+        - 好处:实现简单的适配布局,脱离主文档流
+        - 坏处:手机端布局限制较大
+        - 使用场景:适用于PC端
     - 弹性盒子布局
-        - display：flex
+        - display:flex
+        - 好处:适合手机,PC端 
+        - 使用场景:适用与手机端
