--- a/_posts/2020-9-26-关于xshell工具.md
+++ b/_posts/2020-9-26-关于xshell工具.md
@@ -12,22 +12,30 @@ categories: ["工具的使用"]
 
 ### 常用命令：
 
+#### Linux 命令
+
 - `apt-get` ：主命令 Ubuntu 系统中的包管理工具，可以用来安装、卸载包，也可以用来升级包，还可以用来把系统升级到新的版本。
 		- 1.将网站中所有的软件名字的基本信息下载下来（提前将软件基本信息下载下来（本地
 		- 2.安装过程会从以上下载来的基本信息中筛选（直接筛选本地软件名的基本信息然后去下载
 	- `apt-get update` ：更新镜像源：更新本地软件基本信息
-	- 快捷键
-		- `a`,`i` :插入模式
-- `cp`:复制。 例：cp afile afile.bak 把文件复制为新文件afile.bak
-- vim 命令行模式
-	- 底行命令： 
-		- ：w 保存，
-		- ：q 退出 
-		- yy复制这一行，dd删除这一行
+
+- `cp`:复制。 例：cp afile afile.bak 把文件复制为新文件afile.bak	
 - `mkdir 目录名`：在当前目录建立目录。
 - `mkdir`:将删除空目录。
 - `touch 文件.后缀`:创建一个文件。 例： touch aaa.txt  创建一个空文件，文件名为aaa.txt。
 - `rm 文件名` 删除文件
     - `rm *` 删除当前目录下的所有文件（未隐藏文件）。rm命令不删除目录，除非也指定了-r参数。
     - `rm -rf 目录名` 删除目录以及它所包含的所有内容
-    - Linux 命令 `pwd`:显示当前工作目录
+-  `pwd`:显示当前工作目录
+
+# VIM
+- 命令行模式(esc/默认)
+	- 底行命令 ：引导
+		- ：w 保存，
+		- ：q 退出 
+	- 快捷键
+		- yy :复制
+		- dd :删除
+		- u :撤回
+		- p :粘贴
+- 编辑模式（aAiI）
