--- a/_posts/2016-05-20-其他.md
+++ b/_posts/2016-05-20-其他.md
@@ -1,9 +1,37 @@
 ---
 layout: page
-title:  "更多..."
-subtitle: "正在施工"
+title:  "服务器搭建"
+subtitle: "服务器-从无到有"
 date:   2016-05-20 21:21:21 +0530
-categories: 其他
+categories: [其他]
 ---
 
+# 配置apt-get阿里云镜像源
+- apt-get的工作原理（下载软件 工作分两部，搜索在本地）
+	- 1，将网络中的所有的软件的名中基本信息下载下来
+	- 2，安装过程会从以上下载的基本信息中筛选
+- apt-get update
+- apt-get install 软件名
+- apt-get的配置文件（修改远程连接为阿里云的镜像）
+	- 复制阿里镜像源的系统配置信息到etc/apt/目录下的source.list文件
+
+## 安装nginx
+- 安装 
+	- 如何判断nginx安装成功
+		- `nginx -v` ：查看版本号
+	- 启动 `service nginx start`
+	- 停止 `service nginx stop`
+	- 重启 `service nginx restart`
+- 修改nginx配置文件
+	- 主配置文件 nginx.conf
+	- 辅助配置文件
+		- etc/nginx目录下
+		- sites-enabled里面的所有文件
+		- conf.d里面的所有conf文件
+	- 将sites-enabled里面的default（nginx中默认的网站配置文件）更改其网站根目录
+		- /root
+- 查看错误日志文件
+	- /etc/nginx下的nginx.conf配置文件中
+		- access_log /var/log/nginx/access.log;
+		- error_log /var/log/nginx/error.log;
 
